# Biostream-genomic-data-analytics

./: .gitignore  README.md
cli/: Cargo.toml
cli/src/: main.rs
client/src/: main.rs
frontend/src/: main.py
queue/src/: main.py
server/: go.mod  main.go
server/src/: consumer.py  load.py  main.py
