[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1.14"
warp = "0.3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
env_logger = "0.11.3"
tungstenite = "0.23.0"
actix-files = "0.6.6"
actix-web = "4.8.0"
tokio-tungstenite = "0.23.1"
async-std = "1.12.0"
async-tungstenite = "0.26.2"
futures-util = "0.3.30"
dotenv = "0.15.0"
